--- a/main/plugins/org.talend.mdm.base/pom.xml
+++ b/main/plugins/org.talend.mdm.base/pom.xml
@@ -1046,7 +1046,7 @@
             <dependency>
                 <groupId>org.restlet.gwt</groupId>
                 <artifactId>org.restlet</artifactId>
-                <version>${gwt.restlet.version}</version>
+                <version>2.2.1-TalendPatch</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
